# Locator

./: .gitignore  Dockerfile  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: check.yaml
Locator/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
Locator/static/css/: slyle.css
static/bootstrap/css/: custom.css
static/css/: search.css
static/js/: search.js
templates/: base.html  example.html  home.html  main.html  search.html
templates/account/: profile.html  profile_change.html
templates/catalog/: create_location.html  start_page.html
templates/registration/: login.html  logout.html  password_change.html  password_reset.html  profile.html  register.html  style.css
users/: apps.py  auth.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_selenium.py  tests_selenium.py
