[tool.poetry]
name = "locator"
version = "0.1.0"
description = ""
authors = ["HighCasMan <borody.rula@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.3"
pillow = "^10.4.0"
selenium = "^4.22.0"
pytest = "^8.2.2"
chromedriver = "^2.24.1"
firebase = "^4.0.1"
pymongo = "^4.8.0"
mongoengine = "^0.28.2"
dnspython = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
